--- a/geog176A.rmd
+++ b/geog176A.rmd
@@ -12,16 +12,32 @@ library(mikedown)
 ```
 
 ***
+[COVID-19 dashboard](https://angus-watters.shinyapps.io/covid-dashboard/)
 
+  - A R-Shiny dashboard tracking the COVID-19 pandemic in the US 
+  
+  - Independent project 
 
-[US Groundwater research](https://anguswg-ucsb.github.io/groundwater_2/index.html)
+  - Built using R-Shiny dashboard
 
+<br>
+
+[Shiny app - US groundwater research](https://angus-watters.shinyapps.io/groundwater-dash/)
+
+  - Groundwater research under [Dr. Perrone](https://www.es.ucsb.edu/debra-perrone)
+  
+  - Built using R-Shiny dashboard
+  
   - Data source: *USGS National Water Information System*
   
 <br>
-  
-[Shiny app - Arizona groundwater](https://angus-watters.shinyapps.io/groundwater-dash/)
 
+[US Groundwater research](https://anguswg-ucsb.github.io/groundwater_2/index.html)
+
+  - Groundwater research under [Dr. Perrone](https://www.es.ucsb.edu/debra-perrone)
+  
+  - This is the same investigative research as the above project but this is written up in an rmarkdown document and deployed using GitHub Pages
+  
   - Data source: *USGS National Water Information System*
   
 <br>
@@ -30,6 +46,7 @@ library(mikedown)
 
   - In this project I organized, cleaned and manipulated US COVID-19 case and death data sourced from the NY Times.
   - In a ggplot I plotted daily new cases and daily new cases per capita for several states and I also overlaid a 7 day rolling mean. 
+  - Written using rmarkdown and deployed using GitHub Pages
   
 <br>
 
