--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ library(mikedown)
 ***
 
 
-### **My name is Angus Watters, and welcome to my website!**
+### **My name is Angus Watters, welcome to my website!**
 
 <br>
 
@@ -31,7 +31,7 @@ In my free time I enjoy spending time running, biking, drawing, gardening, and c
 
 ***  
 
-**`Email: adwattersgrubstein@umail.ucsb.edu`**<br>**`GitHub: https://github.com/anguswg-ucsb`**
+#### **`Email: adwattersgrubstein@umail.ucsb.edu`**<br>**`GitHub: https://github.com/anguswg-ucsb`**
 
 <br>
 
