--- a/projects.rmd
+++ b/projects.rmd
@@ -27,7 +27,7 @@ library(mikedown)
 <br>
 
   <center>
-![](img/covid_shiny_v2.png)
+![](img/covid_dash_2.png)
 </center>
 
 <br>
@@ -52,7 +52,7 @@ library(mikedown)
 <br>
 <br>
 
-### **[USGS Groundwater](https://anguswg-ucsb.github.io/groundwater_2/index.html)**
+### **[USGS Groundwater](https://anguswg-ucsb.github.io/groundwater_2/index.html) - R Markdown**
 
   - R Markdown
 
@@ -100,7 +100,9 @@ library(mikedown)
 
   - R Markdown
   
-  - Identical data and research shown in the COVID-19 Shiny dashboard project but written up in an rmarkdown document and deployed using GitHub Pages
+  - I calculated the adjusted case rate, the number of new COVID-19 cases per 100,000 residents over a 7 day period, which the California government uses as a risk level criteria. I then created a county level choropleth map of California detailing county risk levels.
+  
+  - Maps and plots written up in an rmarkdown document and deployed using GitHub Pages
   
   - Data source: [New York Times](https://github.com/nytimes/covid-19-data)
   
